--- a/loginapp/templates/loginapp/home.html
+++ b/loginapp/templates/loginapp/home.html
@@ -1,5 +1,31 @@
 {% extends 'loginapp/base.html' %}
 
 {% block content %}
-<h1>HOME PAGE</h1>
+
+<div class='container'>
+{% for message in messages %}
+<div class='alert alert-{{message.tags}} alert-dismissible fade show' role='alert'>
+    <strong>Message: </strong>{{message}}
+    <button type='button' class='close btn btn-secondary' data-dismiss='alert' aria-label='close'>
+         <span aria-hidden='true'>&times;</span>
+    </button>
+</div>
+{% endfor %}
+    {% if user.is_authenticated %}
+    <h2>Hello! {{fname}}</h2>
+    <h3>You're Successfully Logged in !</h3>
+    <button class="btn btn-primary" type="submit">
+        <a href={% url 'signout' %}>Sign Out</a>
+    <button>
+        {% else %}
+         <button class="btn btn-primary" type="submit">
+        <a href={% url 'signup' %}>Sign Up</a>
+    <button>
+         <button class="btn btn-primary" type="submit">
+        <a href={% url 'login' %}>Login</a>
+    <button>
+        {% endif %}
+
+</div>
+
 {% endblock %}
