--- a/loginapp/templates/loginapp/base.html
+++ b/loginapp/templates/loginapp/base.html
@@ -19,6 +19,11 @@
     <a class="navbar-brand" href={% url 'home' %}>USER LOGIN SYSTEM</a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href={% url 'signout' %}>LOGOUT</a>
+        </li>
+        {% else %}
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href={% url 'home' %}>HOME</a>
         </li>
@@ -28,6 +33,7 @@
         <li class="nav-item">
           <a class="nav-link" href={% url 'signin' %}>LOGIN</a>
         </li>
+        {% endif %}
       </ul>
     </div>
   </div>
@@ -35,7 +41,14 @@
 <br/>
 <br/>
 <br/>
-
+{% for message in messages %}
+<div class='alert alert-{{message.tags}} alert-dismissible fade show' role='alert'>
+    <strong>Message: </strong>{{message}}
+    <button type='button' class='close btn btn-secondary' data-dismiss='alert' aria-label='close'>
+         <span aria-hidden='true'>&times;</span>
+    </button>
+</div>
+{% endfor %}
 
 {% block  content %}
 {% endblock   %}
