--- a/loginapp/templates/loginapp/home.html
+++ b/loginapp/templates/loginapp/home.html
@@ -3,28 +3,14 @@
 {% block content %}
 
 <div class='container'>
-{% for message in messages %}
-<div class='alert alert-{{message.tags}} alert-dismissible fade show' role='alert'>
-    <strong>Message: </strong>{{message}}
-    <button type='button' class='close btn btn-secondary' data-dismiss='alert' aria-label='close'>
-         <span aria-hidden='true'>&times;</span>
-    </button>
-</div>
-{% endfor %}
-    {% if user.is_authenticated %}
-    <h2>Hello! {{fname}}</h2>
-    <h3>You're Successfully Logged in !</h3>
-    <button class="btn btn-primary" type="submit">
-        <a href={% url 'signout' %}>Sign Out</a>
-    <button>
-        {% else %}
-         <button class="btn btn-primary" type="submit">
-        <a href={% url 'signup' %}>Sign Up</a>
-    <button>
-         <button class="btn btn-primary" type="submit">
-        <a href={% url 'login' %}>Login</a>
-    <button>
-        {% endif %}
+    <h1>WELCOME TO LOGIN SYSTEM</h1>
+     {% if user.is_authenticated %}
+        <h2>Hello! {{fname}}</h2>
+        <h3>You're Successfully Logged in !</h3>
+    {% else %}
+    <h3>Please put a valid Username or Password !</h3>
+
+    {% endif %}
 
 </div>
 
